--- a/covid19_app_ui/pubspec.yaml
+++ b/covid19_app_ui/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_fonts: ^2.0.0
   flutter_staggered_grid_view: ^0.3.4
   fl_chart: ^0.30.0
+  device_preview: ^0.7.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
